<resources>
    <string name="app_name">E-Personal</string>
    <string name="bem_vindo">"Treinos instantâneos, resultados duradouros."</string>
    <string name="info">Informações:</string>
    <string name="peso">Qual seu peso:</string>
    <string name="altura">Qual sua Altura:</string>
    <string name="objetivo">Qual seu objetivo:</string>
    <string name="genero">Qual seu gênero:</string>
    <string name="grupamentoSecundario">Informe o grupamento secundário:</string>
    <string name="grupamentoPrincipal">Informe o grupamento primário:</string>
    <string name="btn_gerar">Gerar Treino</string>
    <string name="treino">Treino Gerado:</string>
    <string name="grupamento_um">Grupamento Primário:</string>
    <string name="grupamento_dois">Grupamento Secundário:</string>
</resources>