<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="469dp"
            android:layout_height="204dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/e_personal_banner" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bem_vindo"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:textSize="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_container"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/dark_green"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textColor="@color/dark_green"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex: 80"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textColor="@color/dark_green"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex: 1.96"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/objetivo"
                android:textColor="@color/dark_green"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/objetivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex: Hipertrofia"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero"
                android:textColor="@color/dark_green"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex: Masculino / Feminino"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit"
                android:textSize="16sp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/treino_desejado"
                android:textColor="@color/dark_green"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/grupamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ex: Peito + Tríceps"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_edit"
                android:textSize="16sp"
                android:padding="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGerar"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_gerar"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>


